# rating_vs_first_token

./: LICENSE  README.md  analyze_rating_vs_first.py  analyze_traj.py  llama3_as_judge_with_path.py  pyproject.toml  run_all.sh
data/prompts/: coh_detailed.txt  con_detailed.txt  flu_detailed.txt  rel_detailed.txt
results/: metrics_table.csv  summeval_results_3tiers_coherence.csv  summeval_results_3tiers_consistency.csv  summeval_results_3tiers_fluency.csv  summeval_results_3tiers_relevance.csv
